--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=SORT Bubble Sort library
 version=1.0.0
 author=Stefano Di Paolo
-maintainer=microentropie <stefano@microentropie.com>
+maintainer=microentropie <microentropie@microentropie.com>
 sentence=Sort an array of objects
 paragraph=Sort an array of objects using the specified compare method
 category=Data Processing
